RESOLVED FIXED226609
Fix an ASSERT in objectPrototypeHasOwnProperty() to account for TerminationException.
https://bugs.webkit.org/show_bug.cgi?id=226609
Summary Fix an ASSERT in objectPrototypeHasOwnProperty() to account for TerminationEx...
Mark Lam
Reported 2021-06-03 16:55:21 PDT
Attachments
proposed patch. (2.67 KB, patch)
2021-06-03 17:03 PDT, Mark Lam
rmorisset: review+
Mark Lam
Comment 1 2021-06-03 17:03:29 PDT
Created attachment 430515 [details] proposed patch.
Robin Morisset
Comment 2 2021-06-03 17:07:34 PDT
Comment on attachment 430515 [details] proposed patch. r=me
Mark Lam
Comment 3 2021-06-03 17:42:13 PDT
Thanks for the review. Landed in r278438: <http://trac.webkit.org/r278438>.
Note You need to log in before you can comment on or make changes to this bug.