Fix an ASSERT in objectPrototypeHasOwnProperty() to account for TerminationException. https://bugs.webkit.org/show_bug.cgi?id=226609 rdar://78465046

Reviewed by Robin Morisset.

JSTests:

* stress/termination-exception-in-objectPrototypeHasOwnProperty.js: Added.

Source/JavaScriptCore:

* runtime/ObjectPrototype.cpp:
(JSC::objectPrototypeHasOwnProperty):



Canonical link: https://commits.webkit.org/238459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278438 268f45cc-cd09-0410-ab3c-d52691b4dbfc